fixed scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ a:hover {
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   /* overflow-x: hidden;
   overflow-y: auto;
